# ComfyUI-OmniVoice-TTS

./: .gitignore  README.md  README_zh.md  __init__.py  install.py  pyproject.toml  pytorch_compatibility_matrix.md  requirements.txt
example_workflow/: omnivoice-tts_example_workflow.json
nodes/: __init__.py  loader.py  model_cache.py  multi_speaker_node.py  omnivoice_tts.py  voice_clone_node.py  voice_design_node.py  whisper_loader.py
